--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,18 +18,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></ImageView>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"></ImageView>
 
 
     <Button
         android:id="@+id/buttonToConsult"
-        android:layout_width="0dp"
-        android:layout_height="85dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="100dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#A8CAC176"
-        android:text="Consultations"
+        android:text="@string/consultations"
         android:textColor="#A8504545"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,12 +40,12 @@
     <Button
         android:id="@+id/buttonToEvents"
         android:layout_width="0dp"
-        android:layout_height="85dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#A8CAC176"
-        android:text="Events "
+        android:text="@string/events"
         android:textColor="#A8504545"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -102,8 +103,8 @@
 
     <TextView
         android:id="@+id/textViewTheory"
-        android:layout_width="79dp"
-        android:layout_height="36dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/theory"
         android:textSize="24sp"
@@ -125,7 +126,7 @@
     <Button
         android:id="@+id/buttonToPractice"
         android:layout_width="355dp"
-        android:layout_height="85dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
@@ -141,7 +142,7 @@
     <Button
         android:id="@+id/buttonToLessons"
         android:layout_width="355dp"
-        android:layout_height="85dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="#A8A2D9CE"
