--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="@string/placeholder_quiz_question"
-        android:textColor="#E81C0D"
+        android:textColor="@color/mainButtonText"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
             android:id="@+id/radio_button_quiz_answer_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/placeholder_answer"
             android:textSize="20sp" />
@@ -53,7 +53,7 @@
             android:id="@+id/radio_button_quiz_answer_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/placeholder_answer"
             android:textSize="20sp" />
@@ -62,7 +62,7 @@
             android:id="@+id/radio_button_quiz_answer_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:text="@string/placeholder_answer"
             android:textSize="20sp"
@@ -75,7 +75,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/NextButton"
-        app:backgroundTint="@color/main"
+        android:textColor="@color/nextButtonText"
+        app:backgroundTint="@color/nextButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
