--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="LessonButton" parent="Widget.AppCompat.Button">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">10dp</item>
-        <item name="android:backgroundTint">@color/main</item>
+        <item name="android:textColor">@color/mainButtonText</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:backgroundTint">#D3AE74</item>
     </style>
     <style name="InactiveLessonButton" parent="Widget.AppCompat.Button">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">10dp</item>
+        <item name="android:textColor">@color/mainButtonText</item>
+        <item name="android:textSize">10sp</item>
         <item name="android:backgroundTint">@color/toBeImplemented</item>
     </style>
 </resources>
