--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -24,7 +24,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="46dp"
         android:backgroundTint="@color/black"
-        android:text="@string/LessonName"
+        android:text="@string/Title"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
@@ -48,7 +48,7 @@
         android:layout_marginTop="15dp"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        android:text="@string/LessonScript"
+        android:text="@string/Content"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
