quiz scores + practice + fix gifs, audios, IntroVideo

--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -10,11 +10,12 @@
         android:id="@+id/buttonNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="30dp"
         android:layout_marginBottom="35dp"
         android:backgroundTint="@color/nextButton"
         android:text="@string/NextButton"
         android:textColor="@color/nextButtonText"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -28,6 +29,7 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,10 +47,11 @@
         android:id="@+id/TextViewLesson"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
         android:text="@string/Content"
+        android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +66,7 @@
         android:backgroundTint="@color/mainButtons"
         android:shadowColor="#4C3434"
         android:text="@string/play"
-        android:textColor="@color/mainButtonText"
+        android:textColor="@color/black"
         android:textColorHighlight="#9C27B0"
         app:layout_constraintBottom_toTopOf="@+id/buttonPause"
         app:layout_constraintStart_toStartOf="parent" />
@@ -76,7 +79,7 @@
         android:layout_marginBottom="15dp"
         android:backgroundTint="@color/mainButtons"
         android:text="@string/pause"
-        android:textColor="@color/mainButtonText"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/buttonStop"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -88,7 +91,7 @@
         android:layout_marginBottom="15dp"
         android:backgroundTint="@color/mainButtons"
         android:text="@string/stop"
-        android:textColor="@color/mainButtonText"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/buttonNext"
         app:layout_constraintStart_toStartOf="parent" />
 
