--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="toBeImplemented">#D8DAD5D3</color>
     <color name="mainButtons">#A8D3AE74</color>
     <color name="mainButtonText">#504545</color>
-    <color name="nextButton">#A8ADA8B3</color>
+    <color name="nextButton">#65999F</color>
     <color name="nextButtonText">#504545</color>
     <color name="transparent">#00504545</color>
 <!--    #F99963-->
