quiz scores + practice + fix gifs, audios, video

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main">#E6A287</color>
     <color name="toBeImplemented">#D8DAD5D3</color>
-    <color name="mainButtons">#A8D3AE74</color>
+    <color name="mainButtons">#D96716</color>
     <color name="mainButtonText">#504545</color>
     <color name="nextButton">#65999F</color>
     <color name="nextButtonText">#504545</color>
