--- a/app/src/main/res/layout/activity_lessons_menu.xml
+++ b/app/src/main/res/layout/activity_lessons_menu.xml
@@ -14,6 +14,7 @@
         android:text="@string/lessons"
         android:textColor="#100F0F"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
