--- a/app/src/main/res/layout/list_action.xml
+++ b/app/src/main/res/layout/list_action.xml
@@ -17,5 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:padding="5dp"
-        android:text="Text" />
+        android:text="Text"
+        android:textColor="#395F63" />
 </LinearLayout>
