--- a/app/src/main/res/layout/activity_lessons_menu.xml
+++ b/app/src/main/res/layout/activity_lessons_menu.xml
@@ -51,14 +51,14 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_3"
-                style="@style/InactiveLessonButton"
+                style="@style/LessonButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lesson_3" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_4"
-                style="@style/InactiveLessonButton"
+                style="@style/LessonButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lesson_4" />
@@ -71,7 +71,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/lessons_menu_lesson_button_5"
-                style="@style/InactiveLessonButton"
+                style="@style/LessonButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lesson_5" />
