--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,11 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="#A8CAC176"
+        android:fontFamily="casual"
         android:text="@string/consultations"
-        android:textColor="#A8504545"
+        android:textColor="@color/text"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonToEvents" />
@@ -45,9 +47,11 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="#A8CAC176"
+        android:fontFamily="casual"
         android:text="@string/events"
-        android:textColor="#A8504545"
+        android:textColor="@color/text"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonToConsult"
         app:layout_constraintStart_toStartOf="parent" />
@@ -57,10 +61,10 @@
         android:layout_width="181dp"
         android:layout_height="40dp"
         android:layout_marginTop="33dp"
-
+        android:fontFamily="casual"
         android:text="@string/prattlebattle"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#504545"
+        android:textColor="#433B3B"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +79,7 @@
         android:layout_marginTop="15dp"
         android:fontFamily="casual"
         android:text="@string/coddesses"
-        android:textColor="#504545"
+        android:textColor="@color/text"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,11 +95,12 @@
         android:layout_marginTop="33dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="#A8D3AE74"
-        android:fontFamily="sans-serif"
+        android:fontFamily="casual"
         android:shape="oval"
         android:text="@string/subscribe_now"
-        android:textColor="#504545"
+        android:textColor="@color/text"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +111,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="casual"
         android:text="@string/theory"
+        android:textColor="@color/text"
+        android:textStyle="bold"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +125,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="casual"
         android:text="@string/practice"
+        android:textColor="@color/text"
+        android:textStyle="bold"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,9 +142,11 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="#A8ADA8B3"
+        android:fontFamily="casual"
         android:text="@string/rehearse_to_converse"
-        android:textColor="#504545"
+        android:textColor="@color/text"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -146,9 +159,11 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="#A8A2D9CE"
+        android:fontFamily="casual"
         android:text="@string/start_reading_amp_listening"
-        android:textColor="#504545"
+        android:textColor="@color/text"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
