--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -15,6 +15,7 @@
         android:ems="10"
         android:hint="@string/user_name_key"
         android:inputType="textPersonName"
+        android:fontFamily="casual"
         app:layout_constraintBottom_toTopOf="@+id/editTextAge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -28,6 +29,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/user_email_key"
+        android:fontFamily="casual"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +45,7 @@
         android:ems="10"
         android:hint="@string/user_password_key"
         android:inputType="textPassword"
+        android:fontFamily="casual"
         app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -56,6 +59,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/user_age_key"
+        android:fontFamily="casual"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,6 +73,7 @@
         android:layout_marginBottom="142dp"
         android:ems="10"
         android:hint="@string/user_location_key"
+        android:fontFamily="casual"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +88,8 @@
         android:layout_marginBottom="90dp"
         android:backgroundTint="@color/nextButton"
         android:text="@string/RegisterButton"
-        android:textColor="@color/nextButtonText"
+        android:fontFamily="casual"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
