--- a/app/src/main/res/layout/activity_lessons_menu.xml
+++ b/app/src/main/res/layout/activity_lessons_menu.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
+        android:fontFamily="cursive"
         android:text="@string/lessons"
         android:textColor="#100F0F"
         android:textSize="18sp"
