--- a/app/src/main/res/layout/list_action.xml
+++ b/app/src/main/res/layout/list_action.xml
@@ -16,8 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@color/mainButtons"
         android:padding="5dp"
         android:text="Text"
-        android:textColor="#395F63" />
+        android:textColor="@color/black" />
 </LinearLayout>
