--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="LessonButton" parent="Widget.AppCompat.Button">
-        <item name="android:textColor">@color/mainButtonText</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">10sp</item>
         <item name="android:backgroundTint">@color/mainButtons</item>
+        <item name="android:fontFamily">"cursive"</item>
     </style>
     <style name="InactiveLessonButton" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/mainButtonText</item>
         <item name="android:textSize">10sp</item>
-        <item name="android:backgroundTint">@color/toBeImplemented</item>
+        <item name="android:backgroundTint">#BEDAD5D3</item>
+        <item name="android:fontFamily">"cursive"</item>
     </style>
 </resources>
